--- a/hw_4/pubspec.yaml
+++ b/hw_4/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  bloc: ^8.1.4
+  go_router: ^6.0.0
 
 dev_dependencies:
   flutter_test:
